Closed Bug 326006 Opened 20 years ago Closed 20 years ago

[FIX]nsIWindowProvider should indicate whether an existing window is being reused

Categories

(Core Graveyard :: Embedding: APIs, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

(Keywords: fixed1.8.1)

Attachments

(1 file)

This way we can better track which windows were really opened by web pages and which were opened by users.
Attached patch Like soSplinter Review
Attachment #211065 - Flags: superreview?(jst)
Attachment #211065 - Flags: review?(benjamin)
Summary: nsIWindowProvider should indicate whether an existing window is being reused → [FIX]nsIWindowProvider should indicate whether an existing window is being reused
Target Milestone: --- → mozilla1.9alpha
Comment on attachment 211065 [details] [diff] [review] Like so sr=jst
Attachment #211065 - Flags: superreview?(jst) → superreview+
Attachment #211065 - Flags: review?(benjamin) → review+
Fixed.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Attachment #211065 - Flags: approval-branch-1.8.1?(jst)
Attachment #211065 - Flags: approval-branch-1.8.1?(jst) → approval-branch-1.8.1+
Checked in on 1.8.1
Keywords: fixed1.8.1
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: