Make nsIWindowProvider report whether it created a new window.  Bug 326006, r=bsmedberg, sr=jst